infra/kubernetes/manifests/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  rules:
  - host: grafana.my-project.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana # Имя вашего сервиса Grafana
            port:
              number: 80 # Порт сервиса Grafana
